compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__int_equality.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\nfn go() {\n  1 != 2\n  1 == 2\n}\n"
---
----- SOURCE CODE

fn go() {
  1 != 2
  1 == 2
}


----- COMPILED JAVASCRIPT
function go() {
  1n !== 2n;
  return 1n === 2n;
}
