compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__int_equality1.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\nfn go(y) {\n  let x = 1\n  x == y\n}\n"
---
----- SOURCE CODE

fn go(y) {
  let x = 1
  x == y
}


----- COMPILED JAVASCRIPT
function go(y) {
  let x = 1n;
  return x === y;
}
