compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__int_literals.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\nfn go() {\n    1\n    2\n    -3\n    4001\n    0b00001111\n    0o17\n    0xF\n    1_000\n}\n"
---
----- SOURCE CODE

fn go() {
    1
    2
    -3
    4001
    0b00001111
    0o17
    0xF
    1_000
}


----- COMPILED JAVASCRIPT
function go() {
  1n;
  2n;
  -3n;
  4001n;
  0b1111n;
  0o17n;
  0xFn;
  return 1_000n;
}
