compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__int_mod_complex_expr.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\nfn go() {\n  case 1 >= 0 {\n    True -> 2\n    False -> 4\n  } % 2\n}\n"
---
----- SOURCE CODE

fn go() {
  case 1 >= 0 {
    True -> 2
    False -> 4
  } % 2
}


----- COMPILED JAVASCRIPT
import { remainderInt } from "../gleam.mjs";

function go() {
  return remainderInt(
    (() => {
      let $ = 1n >= 0n;
      if ($) {
        return 2n;
      } else {
        return 4n;
      }
    })(),
    2n
  );
}
