compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__int_patterns.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\nfn go(x) {\n  let assert 4 = x\n}\n"
---
----- SOURCE CODE

fn go(x) {
  let assert 4 = x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

function go(x) {
  if (x !== 4n) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  return x;
}
