compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__preceeding_zeros_int_pattern.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\nfn main(x) {\n  let assert 09_179 = x\n}\n"
---
----- SOURCE CODE

fn main(x) {
  let assert 09_179 = x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

function main(x) {
  if (x !== 9_179n) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "main",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  return x;
}
